Ensure blockquote looks reasonable

--- a/media/markdown.css
+++ b/media/markdown.css
@@ -71,8 +71,8 @@ table > tbody > tr + tr > td {
 }
 
 blockquote {
-	margin: 0 0 0 5px;
-	padding-left: 10px;
+	margin: 0 7px 0 5px;
+	padding: 0 16px 0 10px;
 	border-left: 5px solid;
 }
 
